arrival date mock

--- a/app/assets/javascripts/book.js.erb
+++ b/app/assets/javascripts/book.js.erb
@@ -2,12 +2,23 @@ function nights( nights ) {
   $('.rooms_day').load('./bookings/rooms_day.html');
 //  alert( $('.rooms_day').html);
 }
+function date_select( date , inst ) { 
+  $('.rooms_day').load('./bookings/rooms_day.html');
+//  alert( $('.rooms_day').html);
+}
 //$(alert("hi"))
 $(document).ready(function() { 
 //  alert($('#nights_selected').length + ' elements!');
   $('#nights_selected').change(function() {
     nights($(this).val());
   });
-  $("#arriving").datepicker();
+  $( "#arriving" ).datepicker(
+    {
+      minDate: 0 ,
+      onSelect: function(dateText, inst) { nights(2) ;}
+       } 
+    );
+
 });
 
+ 
