--- a/app/views/bookings/booking.html.erb
+++ b/app/views/bookings/booking.html.erb
@@ -9,49 +9,46 @@
    <%end%>
     </div>
  <% end %>
- <table border="0" cellpadding="8" cellspacing="8" width="100%"> 
-<tr>
-
- <td colspan=2><label for="nights"><%= t('booking.nights')%></label>:</td> 
- <td colspan=2>
-    
-     <select id='nights_selected' name="nights"> 
-       <% ["1"  , "2" , "3" , "4" , "5" , "6" , "7"].each do |ni| %>
-       <option <%=='selected="selected"' if @booking.leaving == @booking.arriving + ni.to_i.day %>><%=ni%></option> 
-       <%end%>
-       <option><%= t('booking.call')%></option>
-     </select>
-     </td> 
-       <td colspan=2><label for="arriving"><%= t('booking.arriving')%></label>:</td> 
-       <td colspan=2><input type="text" id="arriving" name="booking[arriving]" size="35" value="<%=@booking.arriving%>" /></td> 
-     </tr>
-     <tr class="rooms_day">
-        <%= render :template => "bookings/rooms_day"  %>
-     </tr>
- </table> 
-
 <form action="booking.html" method="post"> 
-  <table border="0" cellpadding="8" cellspacing="8"> 
-    <tr> 
-      <td><label for="name"><%= t('booking.name')%></label>:</td> 
-      <td><input type="text" name="booking[name]" size="35"   value="<%=@booking.name%>"  />
-        </td> 
-      <td><label for="email"><%= t('booking.email')%></label>:</td> 
-      <td><input type="text" name="booking[email]" size="35" value="<%=@booking.email%>" /></td> 
-    </tr> 
-    <tr> 
-      <td><label for="phone"><%= t('booking.phone')%></label>:</td> 
-      <td><input type="text" name="booking[phone]" size="35" value="<%=@booking.phone%>" /> </td> 
-      <input type="hidden" name="booking[arriving]" , value="@arriving">
-      <input type="hidden" name="booking[nights]" , value="1">
-      <input type="hidden" name="booking[room]" , value="none">
-      <td> <label for="comment"><%= t('booking.comment')%></label><br /> </td> 
-      <td> <textarea rows="2" cols="35" name="booking[comment]" ><%=@booking.comment%></textarea> </td> 
-    </tr>
-    <tr>
-      <td colspan="2"><input type="submit" name="submit" value="<%=t('booking.submit')%>" /></td> 
-    </tr> 
-  </table> 
+
+<table border="0px" cellpadding="8" cellspacing="8" width="100%"> 
+  <tr>
+
+    <td colspan=2><label for="nights"><%= t('booking.nights')%></label>:</td> 
+    <td colspan=2>
+    
+      <select id='nights_selected' name="booking[nights]"> 
+        <% ["1"  , "2" , "3" , "4" , "5" , "6" , "7"].each do |ni| %>
+        <option <%=='selected="selected"' if @booking.leaving == @booking.arriving + ni.to_i.day %>><%=ni%></option> 
+        <%end%>
+        <option><%= t('booking.call')%></option>
+      </select>
+    </td> 
+    <td colspan=2><label for="arriving"><%= t('booking.arriving')%></label>:</td> 
+    <td colspan=2><input type="text" id="arriving" name="booking[arriving]" size="35" value="<%=@booking.arriving%>" /></td> 
+  </tr>
+  <tr id="rooms_day">
+    <%= render :template => "bookings/rooms_day"  %>
+  </tr>
+
+  <tr> 
+    <td colspan=2>  <label for="name"><%= t('booking.name')%></label>:</td> 
+    <td colspan=2>  <input type="text" name="booking[name]" size="35"   value="<%=@booking.name%>"  /></td> 
+    <td colspan=2><label for="email"><%= t('booking.email')%></label>:</td> 
+    <td colspan=2><input type="text" name="booking[email]" size="35" value="<%=@booking.email%>" /></td> 
+  </tr> 
+  <tr> 
+    <td colspan=2><label for="phone"><%= t('booking.phone')%></label>:</td> 
+    <td colspan=2><input type="text" name="booking[phone]" size="35" value="<%=@booking.phone%>" /> </td> 
+    <td colspan=2> <label for="comment"><%= t('booking.comment')%></label><br /> </td> 
+    <td colspan=2> <textarea rows="2" cols="35" name="booking[comment]" ><%=@booking.comment%></textarea> </td> 
+    <input type="hidden" name="booking[room]" value="none" id="room">
+  </tr>
+  <tr>
+    <td colspan="2"><input type="submit" name="submit" value="<%=t('booking.submit')%>" /></td> 
+    <td colspan="6">  </td> 
+  </tr> 
+</table> 
 </form> 
 
 <%== t('booking.confirmation')%> <br/> <br/> 
