--- a/app/views/activities.html.erb
+++ b/app/views/activities.html.erb
@@ -2,7 +2,7 @@
 
 <div class="activitybox">
   <div class="boxinner">
-      <a href="/activities/large/<%=activity%>.jpg" rel="lightbox[activity]" title="<%= t(".#{activity}.short")%>">
+      <a href="/activities/large/<%=activity%>.jpg" class="lightbox" title="<%= t(".#{activity}.short")%>">
 	    <h2> <%= t(".#{activity}.short")%> </h2>
         <img src="/activities/<%=activity%>.jpg" alt="<%= t(".#{activity}.short")%>"/>
         </a>
