--- a/app/views/suites.html.erb
+++ b/app/views/suites.html.erb
@@ -2,7 +2,7 @@
   <div class="box">
     <div class="boxinner">
       <div class="captionedimage">
-        <a href="/images/<%=room%>.jpg" rel="lightbox[suites]" title="<%=t(room+".short")%>">
+        <a href="/images/<%=room%>.jpg" class="lightbox" title="<%=t(room+".short")%>">
           <img src="/images/<%=room%>_small.jpg" />
         </a>
       </div>
