--- a/app/views/bookings/_matrix.html.erb
+++ b/app/views/bookings/_matrix.html.erb
@@ -3,7 +3,7 @@
     <td width=58px>  </td>
 	<td> <a href="new?start=<%=start - 30.day%>"> month </a> <%= image_tag "arrow-2.gif" %> </td>
     <td> <a href="new?start=<%=start - 7.day%>"> week </a> <%= image_tag "arrow-2.gif" %> </td>
-    <td> <%=start%> <%= image_tag "line.gif" %>  <%=start + 10.day%></td>
+    <td> <%=start%> <%= image_tag "line.gif" %>  <%=start + 10.day%>&nbsp;&nbsp;&nbsp;</td>
     <td> <a href="new?start=<%=start + 7.day%>"> week </a> <%= image_tag "arrow.gif" %> </td>
     <td> <a href="new?start=<%=start + 30.day%>"> month </a> <%= image_tag "arrow.gif" %> </td>
   </tr>
@@ -13,7 +13,7 @@
     <th> </th>
     <% days.each do |day| %>
     <th>
-		noin
+		ma 23.7
 <!-- 
       <%= day %>
 	-->
@@ -32,10 +32,17 @@
         <%==div(room,day)%>
         <% if room_free(room,day) %>
         <a href="#">
-          <%= image_tag "ok.jpg"  , :height => "34px" , :width => "70px" %>
-          </a>
+		<div class=ok>
+          <%= image_tag "ok.png"  , :height => "18px" , :width => "18px" %>
+  		</div>
+     	</a>
         <%else%>
-          <%= image_tag "not.jpg"  , :height => "34px" , :width => "70px"%>
+		<div class=not>
+          <%= image_tag "not.png"  , :height => "18px" , :width => "18px"%>
+		<div class=name>
+			etunimi sukunimi 
+		</div>
+	</div>
         <%end%>
       </th>
       <%end%>
