--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -150,6 +150,7 @@ color: #85AC1E;
 font-size: 14px;
 }
 
+
 h3
 {
 margin-top: 30px;
@@ -170,6 +171,16 @@ h3.first
 {
 margin-top: 0px;
 }
+
+h4
+{
+color: #008495;
+margin-bottom: 10px;
+margin-top: 5px ;
+font-size: 15px;
+font-weight: normal;
+}
+
 
 #lcol
 {
@@ -496,5 +507,11 @@ border-bottom: solid 1px #c0dce0;
   float: left;
   width : 100%;
   margin-bottom: 10px;
+}
+
+.header {
+	color: #50514D; 
+	font-weight: bold;
+	font-size: 15px;	
 }
 
