--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -390,7 +390,7 @@ div#lotus {
   position: relative;
 }
 
-div#aurinko {
+div#aurinko_pic {
   width: 265px;
   float: left;
   position: relative;
