--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -6,7 +6,7 @@
 
 <div id="aurinkowrapper">
   
-  <div id="aurinko">
+  <div id="aurinko_pic">
     <a href='/<%=@locale%>/suites.html'>
       <img alt='Lootus sviitti' border='0' height='310' src='/images/lootus_1.jpg' width='246' />
     </a>
