--- a/app/views/bookings/rooms_day.html.erb
+++ b/app/views/bookings/rooms_day.html.erb
@@ -1,11 +1,11 @@
-<% @bookings.each do |room , free| 
+<% @rooms.each do |room| 
   free = true %>
   <td>
-    <div class="<%=free ? 'free' : 'taken'%>" id="<%=room%>">
+    <div class="<%=free ? 'free' : 'taken'%>" id="<%=room.name%>">
       <%if free%>
-      <a href="#"> <%=room.capitalize%> </a>
+      <a href="#"> <%=room.name.capitalize%> </a>
       <%else%>
-      <%= room %>
+      <%= room.name %>
       <%end%>
     </div>
   </td>
