fix the nights in the mail

--- a/app/views/booking_mailer/confirm.text.erb
+++ b/app/views/booking_mailer/confirm.text.erb
@@ -3,5 +3,5 @@
 <%= t("booking.phone") %> : <%= @booking.phone %>
 <%= t("booking.room") %> : <%= @booking.room %>
 <%= t("booking.arriving") %> : <%= @booking.arriving %>
-<%= t("booking.nights") %> : <%= @booking.leaving %>
+<%= t("booking.nights") %> : <%= (Date.parse(@booking.leaving.to_s) - Date.parse(@booking.arriving.to_s)).to_i %>
 <%= t("booking.comment") %> : <%= @booking.comment %>
