--- a/app/views/bookings/booking.html.erb
+++ b/app/views/bookings/booking.html.erb
@@ -2,7 +2,9 @@
  <%== t('booking.header')%>
 </h4>
 
-<%== t('booking.booking')%> <br/>
+<strong>
+<%== t('booking.booking1')%> </strong><br/><br/>
+<%== t('booking.booking2')%> <br/><br/>
  
 <div class="bookform">
 <form action="booking.html" method="post"> 
@@ -35,7 +37,7 @@
 	<td colspan=8>
 	<table>
     <tr>
-      <td>
+      <td colspan=2>
         <%= t("booking.room_wish") %> *:
       </td>
     </tr>
