--- a/app/assets/stylesheets/book.css
+++ b/app/assets/stylesheets/book.css
@@ -1,14 +1,15 @@
 .free, .taken {
-padding:2px;
+padding:3px;
 padding-top:4px;
 width:70px;
 text-align:center;
 border-radius: 5px;
 margin-right:16px;
+box-shadow: 2px 2px 3px rgba(175, 204, 209, 0.18)
 }
 
 .free{
-	background-color: #0EFD0E;
+	background-color: #b9d7ed;
 }
 
 .errors{
@@ -20,7 +21,7 @@ margin-right:16px;
 }
 
 .selected{
-  background: yellow;
+  background: #abf715;
 }
 
 .book-month
