--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -177,8 +177,8 @@ h4
 color: #008495;
 margin-bottom: 10px;
 margin-top: 5px ;
-font-size: 15px;
-font-weight: normal;
+font-size: 16px;
+font-weight: bold;
 }
 
 
