--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -1,10 +1,11 @@
+
 <div id="lotus">
   <a href='/<%=@locale%>/suites.html'>
    <img alt='Aurinko sviitti' border='0' height='414' src='/images/aurinko.jpg' valign='top' width='312' />
   </a>
 </div>
 
-<div id="aurinkowrapper">
+<div id="main_aurinko">
   
   <div id="aurinko_pic">
     <a href='/<%=@locale%>/suites.html'>
@@ -32,3 +33,6 @@
 </div>
 
 
+<div class="fb-like" data-href="https://facebook.com/villa.Taika" data-width="800" data-layout="standard" data-action="like" data-show-faces="true" data-share="true">
+  
+</div>
