--- a/app/views/index.html.haml
+++ b/app/views/index.html.haml
@@ -1,7 +1,7 @@
 #lotus
   %a{:href => "/#{@locale}/suites.html"}
     %img{:alt => "Aurinko sviitti", :border => "0", :height => "414", :src => "/images/aurinko.jpg", :valign => "top", :width => "312"}/
-#aurinkowrapper
+#main_aurinko
   #aurinko_pic
     %a{:href => "/#{@locale}/suites.html"}
       %img{:alt => "Lootus sviitti", :border => "0", :height => "310", :src => "/images/lootus_1.jpg", :width => "246"}/
@@ -15,3 +15,4 @@
   .subtext
     %strong Villa Taika
     = t("index.text")
+.fb-like{"data-action" => "like", "data-href" => "https://facebook.com/villa.Taika", "data-layout" => "standard", "data-share" => "true", "data-show-faces" => "true", "data-width" => "800"}
