fix the map links in haml

--- a/app/views/map.html.haml
+++ b/app/views/map.html.haml
@@ -1,8 +1,8 @@
 .left
-  %iframe{:frameborder => "0", :height => "500", :marginheight => "0", :marginwidth => "0", :scrolling => "no", :src => "http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=villa+taika&amp;aq=&amp;sll=60.166365,23.585501&amp;sspn=0.021649,0.077162&amp;ie=UTF8&amp;hq=villa+taika&amp;hnear=&amp;cid=11230810214822612726&amp;ll=60.149366,23.563614&amp;spn=0.170886,0.411301&amp;z=11&amp;iwloc=A&amp;output=embed", :width => "600"}
+  %iframe{:frameborder => "0", :height => "500", :marginheight => "0", :marginwidth => "0", :scrolling => "no", :width => "600" , :src => "http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=villa+taika&aq=&sll=60.166365,23.585501&sspn=0.021649,0.077162&ie=UTF8&hq=villa+taika&hnear=&cid=11230810214822612726&ll=60.149366,23.563614&spn=0.170886,0.411301&z=11&iwloc=A&output=embed"}
   %br/
   %small
-    %a{:href => "http://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=villa+taika&amp;aq=&amp;sll=60.166365,23.585501&amp;sspn=0.021649,0.077162&amp;ie=UTF8&amp;hq=villa+taika&amp;hnear=&amp;cid=11230810214822612726&amp;ll=60.149366,23.563614&amp;spn=0.170886,0.411301&amp;z=11&amp;iwloc=A", :style => "color:#0000FF;text-align:left"} View Larger Map
+    %a{:href => "http://maps.google.com/maps?f=q&source=embed&hl=en&geocode=&q=villa+taika&aq=&sll=60.166365,23.585501&sspn=0.021649,0.077162&ie=UTF8&hq=villa+taika&hnear=&cid=11230810214822612726&ll=60.149366,23.563614&spn=0.170886,0.411301&z=11&iwloc=A", :style => "color:#0000FF;text-align:left"} View Larger Map
 .right
   = raw t "map.one"
   %br/
